Adding international addresses, expanding code, notices now returning 406 errors

--- a/web/app/error/404.tpl.html
+++ b/web/app/error/404.tpl.html
@@ -1,7 +1,10 @@
 <div class="inner-view-frame">
   <div class="container-fluid">
     <h3 class="text-primary">Page not found (404)</h3>
-    <div class="container-fluid">Sorry, but the page you requested does not exist.</div>
+    <div class="container-fluid">
+      Sorry, but the page you requested does not exist.
+      Please <a ng-click="back()">go back</a> to the previous page.
+    </div>
   </div>
 </div>
 <div class="gradient-footer"></div>
