--- a/web/app/cenozo/modal-value.tpl.html
+++ b/web/app/cenozo/modal-value.tpl.html
@@ -5,11 +5,16 @@
   </div>
   <div class="modal-body">
     <label for="value" class="control-label">{{ local.message }}</label>
-    <input name="value"
-           ng-model="value"
-           class="form-control"
-           type="text"
-           required />
+    <input ng-if="!local.enumList"
+      name="value"
+      ng-model="local.value"
+      class="form-control"
+      type="text"
+      required />
+    <select ng-if="local.enumList"
+      ng-options="item.value as item.name for item in local.enumList"
+      ng-model="local.value"
+      class="form-control"></select>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" ng-click="local.cancel()">Cancel</button>
