--- a/web/app/error/500.tpl.html
+++ b/web/app/error/500.tpl.html
@@ -1,7 +1,11 @@
 <div class="inner-view-frame">
   <div class="container-fluid">
     <h3 class="text-primary">Internal Server Error (500)</h3>
-    <div class="container-fluid">Sorry, the server was unable to respond to your request.</div>
+    <div class="container-fluid">
+      Sorry, the server was unable to respond to your request.
+      Please <a ng-click="reload()">reload</a> the page or
+      <a ng-click="back()">go back</a> to the previous page.
+    </div>
   </div>
 </div>
 <div class="gradient-footer"></div>
