--- a/web/app/cenozo/modal-datetime.tpl.html
+++ b/web/app/cenozo/modal-datetime.tpl.html
@@ -7,8 +7,8 @@
       <div ng-if="'date' == local.pickerType ||
                   'datetime' == local.pickerType ||
                   'datetimesecond' == local.pickerType"
-           ng-switch="local.mode" class="container-fluid">
-        <table ng-switch-when="day" class="full-width">
+           class="container-fluid">
+        <table class="full-width">
           <thead>
             <tr>
               <th>
@@ -16,10 +16,8 @@
                   <i class="glyphicon glyphicon-chevron-left"></i>
                 </button>
               </th>
-              <th colspan="5">
-                <button id="{{uniqueId}}-title"
-                        type="button" class="btn btn-default full-width"
-                        ng-click="local.nextMode()">
+              <th colspan="{{ 'day' == local.mode ? 5 : ( 'month' == local.mode ? 1 : 3 ) }}">
+                <button type="button" class="btn btn-default full-width" ng-click="local.nextMode()">
                   <strong>{{ local.modeTitle }}</strong>
                 </button>
               </th>
@@ -29,7 +27,7 @@
                 </button>
               </th>
             </tr>
-            <tr>
+            <tr ng-if="'day' == local.mode">
               <th class="text-center"><small>Sun</small></th>
               <th class="text-center"><small>Mon</small></th>
               <th class="text-center"><small>Tue</small></th>
@@ -46,73 +44,6 @@
                         ng-class="{'btn-muted':cell.weekend&&!cell.current,'btn-info':cell.current}"
                         ng-click="local.select(cell.date)" ng-disabled="cell.disabled">
                   <span ng-class="{'text-muted': cell.offMonth}">{{cell.label}}</span>
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <table ng-switch-when="month" class="full-width">
-          <thead>
-            <tr>
-              <th>
-                <button type="button" class="btn btn-default btn-sm full-width" ng-click="local.viewPrev()">
-                  <i class="glyphicon glyphicon-chevron-left"></i>
-                </button>
-              </th>
-              <th>
-                <button id="{{uniqueId}}-title"
-                        type="button" class="btn btn-default btn-sm full-width"
-                        ng-click="local.nextMode()">
-                  <strong>{{ local.modeTitle }}</strong>
-                </button>
-              </th>
-              <th>
-                <button type="button" class="btn btn-default btn-sm full-width" ng-click="local.viewNext()">
-                  <i class="glyphicon glyphicon-chevron-right"></i>
-                </button>
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="row in local.cellList track by $index">
-              <td ng-repeat="cell in row track by cell.date" class="text-center" id="{{cell.uid}}">
-                <button type="button" class="btn btn-default"
-                        ng-class="{'btn-info': cell.current, active: isActive(cell)}"
-                        ng-click="local.select(cell.date)" ng-disabled="cell.disabled">
-                  <span ng-class="{'text-info': cell.current}">{{cell.label}}</span>
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <table ng-switch-when="year" class="full-width">
-          <thead>
-            <tr>
-              <th>
-                <button type="button" class="btn btn-default btn-sm full-width" ng-click="local.viewPrev()">
-                  <i class="glyphicon glyphicon-chevron-left"></i>
-                </button>
-              </th>
-              <th colspan="3">
-                <button id="{{uniqueId}}-title" type="button"
-                        class="btn btn-default btn-sm full-width" disabled>
-                  <strong>{{ local.modeTitle }}</strong>
-                </button>
-              </th>
-              <th>
-                <button type="button" class="btn btn-default btn-sm full-width" ng-click="local.viewNext()">
-                  <i class="glyphicon glyphicon-chevron-right"></i>
-                </button>
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="row in local.cellList track by $index">
-              <td ng-repeat="cell in row track by cell.date" class="text-center" id="{{cell.uid}}">
-                <button type="button" class="btn btn-default"
-                        ng-class="{'btn-info': cell.current, active: isActive(cell)}"
-                        ng-click="local.select(cell.date)" ng-disabled="cell.disabled">
-                  <span ng-class="{'text-info': cell.current}">{{cell.label}}</span>
                 </button>
               </td>
             </tr>
