--- a/web/app/participant/view.tpl.html
+++ b/web/app/participant/view.tpl.html
@@ -1,11 +1,11 @@
 <cn-record-view model="model"></cn-record-view>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Address List" model="model.cnView.cnAddressModel"></cn-record-list>
+<cn-record-list heading="Address List" model="model.viewModel.cnAddressModel"></cn-record-list>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Phone List" model="model.cnView.cnPhoneModel"></cn-record-list>
+<cn-record-list heading="Phone List" model="model.viewModel.cnPhoneModel"></cn-record-list>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Consent List" model="model.cnView.cnConsentModel"></cn-record-list>
+<cn-record-list heading="Consent List" model="model.viewModel.cnConsentModel"></cn-record-list>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Alternate List" model="model.cnView.cnAlternateModel"></cn-record-list>
+<cn-record-list heading="Alternate List" model="model.viewModel.cnAlternateModel"></cn-record-list>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Event List" model="model.cnView.cnEventModel"></cn-record-list>
+<cn-record-list heading="Event List" model="model.viewModel.cnEventModel"></cn-record-list>
